Added LoginForm.java to represent login page after opening page Added PersonLogin.java to create person objects Added onFacbook, onTwitter, and onAccount onClickListeners to MainActivity.java. Updated activity_main.xml to reflect desired appearance. Added login_form.xml for next page Added app_tabs.xml for remaining page Updated AndroidManifest.xml to include new activity LoginForm

--- a/HealthApp/res/values/strings.xml
+++ b/HealthApp/res/values/strings.xml
@@ -10,4 +10,8 @@
 	<string name="login_twitter">Login to Twitter</string>
 	<string name="login_facebook">Login to Facebook</string>
 	<string name="create_account">Create An Account</string>
+	<string name="name">Name</string>
+	<string name="password">Password</string>
+	<string name="username">Username</string>
+	<string name="login">Login</string>
 </resources>
